# diffshot

./: .gitignore  Cargo.toml  LICENSE  README.md
fonts/: JetBrainsMono.b64
src/: diff.rs  main.rs  render.rs
