[package]
name = "diffshot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
resvg = "0.44"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
